--- a/grid/style.css
+++ b/grid/style.css
@@ -1,5 +1,204 @@
 
-.container {
+.header{
+  display:grid;
+  /* grid-template-columns: repeat(12,1fr); */
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  /* background-color: gray; */
+}
+
+#div-logoSpotify{
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+#div-nav{
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+nav{
+  text-align: center;
+   background-color: white; 
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-around;
+   font-family: Arial, Helvetica, sans-serif;
+   color: gray;
+
+   
+}
+
+h1{
+  color:white;
+  text-align: center ;
+  line-height: 100px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+h2{
+    text-align: center;
+}
+
+h3{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
+
+.features h3{
+  text-align: left;
+}
+
+.features-text{
+  color:white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+p{
+  color:white;
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.item {
+  background: #c565a8;
+  border: solid 2px #305077;
+  text-align: left;
+  /* font-size: 1em;
+  margin: 4px;
+  color: white; */
+  /* font-weight: bold; */
+  margin: 1px;
+  color:white;
+ 
+}
+
+.cover{
+  width: 100%;
+  height: 400px;
+  /* background-color: green; */
+  background-image: url("images/pexels-vishnu-r-nair-1105666.jpg");
+  background-size: cover;  
+  position: 0 0;
+  background-repeat: no-repeat;
+}
+
+.cover p{
+  text-align: center;
+}
+.whatsOn{
+  /* background-color: lightsalmon; */
+  /* text-align: center; */
+  /* height: 400px; */
+}
+
+.whatsOn-child p{
+  color: gray;
+} 
+
+.whatsOn-child h3{
+  color: #36c794;
+} 
+.whatsOn-child{
+display:grid;
+/* grid-template-columns: repeat(12,1fr); */
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: 1f 1fr 1fr;
+/* background-color: lightblue; */
+text-align: center;
+}
+
+.features{
+  padding:30px;
+  display:grid;
+  height: 450px;
+  /* grid-template-columns: repeat(12,1fr); */
+  grid-template-columns: repeat(12,1fr) ;
+  grid-template-rows: repeat(10,1fr);
+  /* background-color: blueviolet; */
+  background-color: #1ab26b;
+  color:white;
+  font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .features h3{
+    
+  }
+/* .features-item{
+  grid-row-start: 1;
+  grid-row-end: 3;
+  } */
+
+.features-item-title{
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 2;
+ 
+}
+
+.features-item-item1{
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end:5;
+  
+}
+
+.features-item-item2{
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 5;
+  grid-row-end:8;
+  
+}
+
+.features-item-item3{
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 8;
+  grid-row-end:13;
+  
+}
+.features-item-logo{
+  grid-column-start: 6  ;
+  grid-column-end: 9;
+  grid-row-start: 5;
+  grid-row-end:7;
+  
+  
+}
+.features-item-pic{
+  grid-column-start: 8;
+  grid-column-end: 13;
+  grid-row-start: 2;
+  grid-row-end:13;
+}
+
+.features-title{
+
+}
+.features-pic{
+
+}
+/* .header{
+  grid-column:span 12;
+  
+}
+
+.menu{
+  grid-column: span 4;
+}
+
+.content{
+  grid-column: span 8;
+}
+
+.footer{
+  grid-column: span 12;
+} */
+/* .container {
     border: solid 2px;
     background: #f8ddf0;
     margin-bottom: 1em;
@@ -13,17 +212,7 @@
     
   }
 
-h1{
-  color:white;
-  text-align: center ;
-  line-height: 100px;
-  
-}
 
-p{
-  color:white;
-  text-align: center;
-}
 
   #main-picture{
     height: 400px;
@@ -51,7 +240,7 @@ p{
     
     } 
     .item:nth-child(1) { grid-area: left; } 
-    .item:nth-child(2) { grid-area: right; } 
+    .item:nth-child(2) { grid-area: right; }  */
 
     /* .container { 
 
@@ -72,13 +261,3 @@ p{
     .item:nth-child(5) { grid-area: foot; } */
 
   
-    .item {
-        background: #c565a8;
-        border: solid 2px #305077;
-        text-align: left;
-        font-size: 1em;
-        margin: 4px;
-        color: white;
-        font-weight: bold;
-        grid
-      }
